Update on layout

--- a/App.config
+++ b/App.config
@@ -24,6 +24,12 @@
             <setting name="MonitorSecond" serializeAs="String">
                 <value>Screen 3</value>
             </setting>
+            <setting name="ProjectName" serializeAs="String">
+                <value>Titanic</value>
+            </setting>
+            <setting name="Locked" serializeAs="String">
+                <value>False</value>
+            </setting>
         </KLT_LedShow.My.MySettings>
     </userSettings>
 </configuration>
