sANC DMX control added

--- a/App.config
+++ b/App.config
@@ -30,6 +30,12 @@
             <setting name="Locked" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="PaletteImagesPath" serializeAs="String">
+                <value>E:\KLT\LedShow\KKLT Led Show v2\ColorMaps</value>
+            </setting>
+            <setting name="EffectsImagePath" serializeAs="String">
+                <value>E:\KLT\LedShow\KKLT Led Show v2\Effects</value>
+            </setting>
         </KLT_LedShow.My.MySettings>
     </userSettings>
 </configuration>
