Cleanup and moved to DDP protocol instead of sACN

--- a/App.config
+++ b/App.config
@@ -36,6 +36,12 @@
             <setting name="EffectsImagePath" serializeAs="String">
                 <value>E:\KLT\LedShow\KKLT Led Show v2\Effects</value>
             </setting>
+            <setting name="DDPPort" serializeAs="String">
+                <value>4048</value>
+            </setting>
+            <setting name="LedsPerMeter" serializeAs="String">
+                <value>60</value>
+            </setting>
         </KLT_LedShow.My.MySettings>
     </userSettings>
 </configuration>
