Werkende versie met effecten

--- a/App.config
+++ b/App.config
@@ -42,6 +42,45 @@
             <setting name="LedsPerMeter" serializeAs="String">
                 <value>60</value>
             </setting>
+            <setting name="PodiumBreedte" serializeAs="String">
+                <value>1000</value>
+            </setting>
+            <setting name="PodiumHoogte" serializeAs="String">
+                <value>400</value>
+            </setting>
+            <setting name="CustomEffectC1" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectC2" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectC3" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectC4" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectC5" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectIntensity" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectSpeed" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectBrightness" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectDirection" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectPosition" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectDuration" serializeAs="String">
+                <value />
+            </setting>
         </KLT_LedShow.My.MySettings>
     </userSettings>
 </configuration>
