Met effecten en werkende preveiw

--- a/App.config
+++ b/App.config
@@ -81,6 +81,12 @@
             <setting name="CustomEffectDuration" serializeAs="String">
                 <value />
             </setting>
+            <setting name="CustomEffectBrightnessEffect" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="CustomEffectDispersion" serializeAs="String">
+                <value />
+            </setting>
         </KLT_LedShow.My.MySettings>
     </userSettings>
 </configuration>
