--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -74,5 +74,11 @@
     <Setting Name="CustomEffectDuration" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="CustomEffectBrightnessEffect" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="CustomEffectDispersion" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
