--- a/KLT LedShow.vbproj
+++ b/KLT LedShow.vbproj
@@ -10,6 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Modules\CustomEffects\Iceberg.vb" />
+  </ItemGroup>
+
+  <ItemGroup>
     <COMReference Include="WMPLib">
       <WrapperTool>tlbimp</WrapperTool>
       <VersionMinor>0</VersionMinor>
@@ -80,6 +84,10 @@
   <ItemGroup>
     <Folder Include="Database\" />
     <Folder Include="Data\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <compile Include="Modules\CustomEffects\Iceberg.vb" />
   </ItemGroup>
 
 </Project>
