--- a/App.config
+++ b/App.config
@@ -49,43 +49,43 @@
                 <value>400</value>
             </setting>
             <setting name="CustomEffectC1" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
             <setting name="CustomEffectC2" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
             <setting name="CustomEffectC3" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
             <setting name="CustomEffectC4" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
             <setting name="CustomEffectC5" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
             <setting name="CustomEffectIntensity" serializeAs="String">
-                <value />
+                <value>100</value>
             </setting>
             <setting name="CustomEffectSpeed" serializeAs="String">
-                <value />
+                <value>100</value>
             </setting>
             <setting name="CustomEffectBrightness" serializeAs="String">
-                <value />
+                <value>100</value>
             </setting>
             <setting name="CustomEffectDirection" serializeAs="String">
-                <value />
+                <value>UP</value>
             </setting>
             <setting name="CustomEffectPosition" serializeAs="String">
-                <value />
+                <value>0</value>
             </setting>
             <setting name="CustomEffectDuration" serializeAs="String">
-                <value />
+                <value>30</value>
             </setting>
             <setting name="CustomEffectBrightnessEffect" serializeAs="String">
-                <value />
+                <value>100</value>
             </setting>
             <setting name="CustomEffectDispersion" serializeAs="String">
-                <value />
+                <value>100</value>
             </setting>
         </KLT_LedShow.My.MySettings>
     </userSettings>
