--- a/App.config
+++ b/App.config
@@ -87,6 +87,12 @@
             <setting name="CustomEffectDispersion" serializeAs="String">
                 <value>100</value>
             </setting>
+            <setting name="ScriptPDF" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="SplitPosition" serializeAs="String">
+                <value>800</value>
+            </setting>
         </KLT_LedShow.My.MySettings>
     </userSettings>
 </configuration>
