--- a/My Project/Settings.settings
+++ b/My Project/Settings.settings
@@ -80,5 +80,11 @@
     <Setting Name="CustomEffectDispersion" Type="System.String" Scope="User">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="ScriptPDF" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
+    <Setting Name="SplitPosition" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">800</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
